--- a/CPP/CPP08/ex02/Makefile
+++ b/CPP/CPP08/ex02/Makefile
@@ -1,19 +1,19 @@
-NAME = Span
+NAME = MutantStack
 
-SRC = main.cpp Span.cpp
+SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
 C++ = c++
 
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
 	$(C++) $(CFLAGS) $(OBJ) -o $@
 
-%.o: %.cpp easyfind.hpp
+%.o: %.cpp MutantStack.hpp
 	$(C++) $(CFLAGS) -c $< -o $@
 
 clean:
